dibs-sql/src/render/snapshots/dibs_sql__render__tests__jsonb_get.snap
---
source: crates/dibs-sql/src/render/tests.rs
expression: result.sql
---
SELECT "metadata" -> 'key'
FROM "products"
