dibs-sql/src/render/snapshots/dibs_sql__render__tests__jsonb_get_text.snap
---
source: crates/dibs-sql/src/render/tests.rs
expression: result.sql
---
SELECT "metadata" ->> 'name'
FROM "products"
