dibs-sql/src/render/snapshots/dibs_sql__render__tests__jsonb_key_exists.snap
---
source: crates/dibs-sql/src/render/tests.rs
expression: result.sql
---
SELECT "id"
FROM "products"
WHERE "metadata" ? 'featured'
