dibs-sql/src/render/snapshots/dibs_sql__render__tests__like_search.snap
---
source: crates/dibs-sql/src/render/tests.rs
expression: result.sql
---
SELECT "id", "handle"
FROM "products"
WHERE "handle" LIKE $1
