dibs-sql/src/render/snapshots/dibs_sql__render__tests__order_by_multiple_with_comma.snap
---
source: crates/dibs-sql/src/render/tests.rs
expression: result.sql
---
SELECT "name"
FROM "users"
ORDER BY "created_at" DESC, "name" ASC
