dibs-sql/src/render/snapshots/dibs_sql__render__tests__order_by_nulls_last.snap
---
source: crates/dibs-sql/src/render/tests.rs
expression: result.sql
---
SELECT "name"
FROM "users"
ORDER BY "score" DESC NULLS LAST
