dibs-sql/src/render/snapshots/dibs_sql__render__tests__select_all_from_table.snap
---
source: crates/dibs-sql/src/render/tests.rs
expression: result.sql
---
SELECT "users".*, "posts"."title"
FROM "users" "users"
LEFT JOIN "posts" "posts" ON "posts"."user_id" = "users"."id"
