dibs-sql/src/render/snapshots/dibs_sql__render__tests__select_column_alias.snap
---
source: crates/dibs-sql/src/render/tests.rs
expression: result.sql
---
SELECT "first_name" AS "name", COUNT("id") AS "total"
FROM "users"
