dibs-sql/src/render/snapshots/dibs_sql__render__tests__select_distinct.snap
---
source: crates/dibs-sql/src/render/tests.rs
expression: result.sql
---
SELECT DISTINCT "category", "status"
FROM "products"
