dibs-sql/src/render/snapshots/dibs_sql__render__tests__select_distinct_on.snap
---
source: crates/dibs-sql/src/render/tests.rs
expression: result.sql
---
SELECT DISTINCT ON ("t0"."user_id") "t0"."id", "t0"."user_id", "t0"."created_at"
FROM "orders" "t0"
ORDER BY "t0"."user_id" ASC, "t0"."created_at" DESC
