dibs-sql/src/render/snapshots/dibs_sql__render__tests__select_distinct_on_multiple.snap
---
source: crates/dibs-sql/src/render/tests.rs
expression: result.sql
---
SELECT DISTINCT ON ("shop_id", "category_id") "id", "shop_id", "category_id", "name"
FROM "products"
ORDER BY "shop_id" ASC, "category_id" ASC, "created_at" DESC
